--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,64 @@
+name: "Build & Release"
 on:
-  pull_request:
-    branches:
-      - main
-      - master
   push:
     branches:
       - main
       - master
-      - develop
-name: "Build & Release"
-jobs:
-  build:
-    name: Build & Release
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: '12'
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          architecture: x64
+      - develop  # This will trigger on push to main, master, or develop
+  pull_request:
+    branches:
+      - main
+      - master
 
-      - run: flutter build apk --release --split-per-abi
-      - run: |
+jobs:
+  # Android build job (Windows runner)
+  build_android:
+    name: Build Android APK
+    runs-on: windows-latest  # Using Windows for Android build
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: 'latest'
+
+      - name: Install dependencies
+        run: |
+          flutter pub get
+
+      - name: Build Android APK
+        run: |
+          flutter build apk --release --split-per-abi
+
+      - name: Upload APK as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: android-apk
+          path: build/app/outputs/flutter-apk/app-release.apk  # Path to the APK
+
+  # iOS build job (macOS runner)
+  build_ios:
+    name: Build iOS IPA
+    runs-on: macos-latest  # macOS runner for iOS builds
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: 'latest'
+
+      - name: Install dependencies
+        run: |
+          flutter pub get
+
+      - name: Build iOS IPA (No Code Sign)
+        run: |
           flutter build ios --no-codesign
           cd build/ios/iphoneos
           mkdir Payload
@@ -33,17 +66,29 @@ jobs:
           ln -s ../Runner.app
           cd ..
           zip -r app.ipa Payload
-      - name: Push to Releases
+
+      - name: Upload IPA as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ios-ipa
+          path: build/ios/iphoneos/app.ipa  # Path to the IPA
+
+  # Release job (Deploy to GitHub releases)
+  release:
+    name: Push to GitHub Releases
+    runs-on: ubuntu-latest
+    
+    needs: [build_android, build_ios]  # Ensure release runs after build jobs
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Upload Android APK and iOS IPA to GitHub Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
-          tag: v1.0.${{ github.run_number }}
-          token: ${{ secrets.TOKEN }}
-
-
-
-
-
-
-# push to master, main, develop
-# pull request on main master
+          artifacts: |
+            build/app/outputs/flutter-apk/app-release.apk
+            build/ios/iphoneos/app.ipa
+          tag: v1.0.${{ github.run_number }}  # Automatically increment version
+          token: ${{ secrets.TOKEN }}  # GitHub token for authentication
