--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,37 +1,51 @@
 name: "Build & Release"
 on:
+  pull_request:
+    branches:
+      - main
+      - master
   push:
     branches:
       - main
       - master
       - develop
-  pull_request:
-    branches:
-      - main
-      - master
 
 jobs:
-  # Android build job (Windows runner)
-  build_android:
-    name: Build Android APK
+  build:
+    name: Build & Release
     runs-on: windows-latest  # Using Windows for Android build
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2  # Correct version for checkout
+      # Checkout code from the repository
+      - uses: actions/checkout@v3  # Correct version for checkout
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+      # Set up Java 19 (Required for Android build)
+      - uses: actions/setup-java@v3
         with:
-          flutter-version: 'latest'
+          distribution: 'zulu'
+          java-version: '19'  # Java 19 version
 
-      - name: Install dependencies
-        run: flutter pub get
+      # Set up Flutter 3.27.1 for Android build
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.27.1'  # Specify Flutter version 3.27.1
+          channel: 'stable'
+          architecture: x64
 
-      - name: Build Android APK
-        run: flutter build apk --release --split-per-abi  # Build APK for Android
+      # Install dependencies using Flutter
+      - run: flutter pub get
 
-      # Push to Releases (Upload the APK directly to GitHub Releases)
+      # Build the Android APK for release with split-per-abi
+      - run: flutter build apk --release --split-per-abi  # Build APK for Android
+
+      # Upload APK as artifact
+      - name: Upload Android APK as artifact
+        uses: actions/upload-artifact@v2  # Using v2 for artifact upload
+        with:
+          name: android-apk
+          path: build/app/outputs/flutter-apk/app-release.apk  # Path to APK file
+
+      # Push the APK to GitHub Releases
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
