--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,7 @@ jobs:
     runs-on: windows-latest  # Using Windows for Android build
 
     steps:
+      # Checkout the code from the repository
       - uses: actions/checkout@v3  # Correct version for checkout
 
       # Set up Java (required for Android build)
@@ -24,7 +25,7 @@ jobs:
           distribution: 'zulu'
           java-version: '19'  # Use Java 19 for Android
 
-      # Set up Flutter 3.27.1 (Specific version for Flutter setup)
+      # Set up Flutter 3.27.1 for Android build
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.27.1'  # Flutter version 3.27.1
@@ -34,16 +35,28 @@ jobs:
       # Install dependencies for Flutter project
       - run: flutter pub get
 
-      # Build Android APK
-      - run: flutter build apk --release --split-per-abi  # Build APK for Android
+      # Build Android APKs for different architectures
+      - run: flutter build apk --release --split-per-abi  # Build APK for all architectures (arm64, armeabi, x86_64)
 
-      # Push APK to GitHub Releases
-      - name: Push APK and Source Code to Releases
+      # Build iOS IPA (if required) - COMMENTED OUT FOR NOW
+      # - run: flutter build ios --no-codesign
+      # - run: cd build/ios/iphoneos
+      # - run: mkdir Payload
+      # - run: cd Payload
+      # - run: ln -s ../Runner.app
+      # - run: cd ..
+      # - run: zip -r app.ipa Payload
+
+      # Upload all APKs, .ipa, and source code (zip/tar.gz) to GitHub Releases
+      - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
-          # Add both APK and source code as artifacts
           artifacts: |
-            build/app/outputs/flutter-apk/app-release.apk  # APK file
-            .  # The source code (entire repository)
+            build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
+            build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
+            build/app/outputs/flutter-apk/app-x86_64-release.apk
+            build/ios/iphoneos/app.ipa  # Upload the .ipa file (if needed)
+            output-metadata.json
+            .  # Include the source code (entire repository)
           tag: v1.0.${{ github.run_number }}  # Automatically increment version
           token: ${{ secrets.TOKEN }}  # Use custom token stored in GitHub Secrets
